Modification of comments dashboard view : Displaying all comments order by number of reports

--- a/templates/admin/manageComments.html.twig
+++ b/templates/admin/manageComments.html.twig
@@ -59,7 +59,7 @@
                                                 <br>
                                                 <p class="text-center">Available options</p>
                                                 <div class="d-flex justify-content-center">
-                                                    <a href="{{ path('unreport_comment', {'id': comment.id}) }}" class="btn btn-success btn-sm mx-2">Unreport</a>
+                                                    <a href="{{ path('unreport_comment', {'id': comment.id}) }}" class="btn btn-success btn-sm mx-2">Validate</a>
                                                     <a href="{{ path('delete_comment', {'id': comment.id}) }}" class="btn btn-danger btn-sm mx-2">Delete</a>                                        </div>
                                             </div>
                                         </div>
