Setting correct zone time for dates and adding date for email sending

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,18 +12,18 @@
     <title>{% block title %}Welcome!{% endblock %}</title>
 
     <!-- FB Open Graph data -->
-    <meta property="og:title" content="Interactive map of Algeria" />
+    <meta property="og:title" content="ALGERdiscoveRIE, Interactive map of Algeria" />
     <meta property="og:type" content="Interactive encyclopedia" />
     <meta property="og:url" content="http://alger.discoverie.webagencypro.fr" />
     <meta property="og:image" content="img/dz-flag.png" />
-    <meta property="og:description" content="Who said that Algeria is only a big desert with and a dangerous country. Come and see the reality about Algeria. You will fall in love with this wonderful country."/>
+    <meta property="og:description" content="Who said that Algeria is only a big desert and a dangerous country. Come and see the reality about Algeria. You will fall in love with this wonderful country."/>
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="interactive encyclopedia" />
     <meta name="twitter:title" content="Interactive map of Algeria, by Younes Bouaziz" />
     <meta name="twitter:image:src" content="http://alger.discoverie.webagencypro.fr/public/img/dz-flag.png" />
-    <meta name="twitter:description" content="Who said that Algeria is only a big desert with and a dangerous country. Come and see the reality about Algeria. You will fall in love with this wonderful country."/>
+    <meta name="twitter:description" content="Who said that Algeria is only a big desert and a dangerous country. Come and see the reality about Algeria. You will fall in love with this wonderful country."/>
 
     <!-- TinyMCE -->
     <script src="https://cdn.tiny.cloud/1/j7edr96twwloguzfrtwtxsez5j6jx7gbta70ac6v012jsl6z/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
